# wooting-analog-java-wrapper

./: .gitignore  README.md  build.gradle  build.gradle.kts  build.zig  build.zig.zon  gradle.properties  settings.gradle  settings.gradle.kts
build-logic/: CREDITS  build.gradle.kts
build-logic/src/main/kotlin/: gradlebuild.zig.gradle.kts
build-logic/src/main/kotlin/gradlebuild/: ZigBuild.kt  ZigInstall.kt
native/: CMakeLists.txt
native/cmake-toolchain/: apple-arm64.cmake  apple-x86_64.cmake  windows.cmake
native/libs/analogsdk/apple/arm64/wrapper/: libwooting_analog_wrapper.dylib
native/libs/analogsdk/apple/x86_64/wrapper/: libwooting_analog_wrapper.dylib
native/libs/analogsdk/windows/wrapper/: SDK_USAGE.md
native/libs/analogsdk/windows/wrapper/includes-cpp/: wooting-analog-common.h  wooting-analog-wrapper.h
native/wrapperglue/: glue.cpp  glue.h
src/main/java/com/github/botn365/main/: NataiveLoader.java  WootingAnalogWrapper.java
